tests/pos/targetName-override/B_2.java
// Java
public class B_2 extends A_1 {
  @Override
  public int bar() {
    return 2;
  }
}
