tests/neg/alpha-override1/B_1.java
// Java
public class B_1 {
  public int bar() {
    return 2;
  }
}
